--- a/src/websrc/index.html
+++ b/src/websrc/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>esp-rfid</title>
+    <title>十一月设备设置</title>
     <!-- Bootstrap core CSS -->
     <link href="css/required.css" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
             </div>
             <div class="sidebar-header">
                 <br>
-                <h1><i class="glyphicon glyphicon-tags" aria-hidden="true"></i>esp-rfid</h1>
+                <h1><i class="glyphicon glyphicon-tags" aria-hidden="true"></i>十一月设备设置</h1>
             </div>
             <ul class="list-unstyled components">
                 <li class="active">
@@ -32,56 +32,48 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false"><i  class="glyphicon glyphicon-cog"></i>Settings</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#" id="network"><i class="glyphicon glyphicon-signal"></i>Wireless Network</a>
+                            <a href="#" id="network"><i class="glyphicon glyphicon-signal"></i>wifi设置</a>
                         </li>
                         <li>
-                            <a href="#" id="hardware"><i class="glyphicon glyphicon-wrench"></i>Hardware Settings</a>
+                            <a href="#" id="hardware"><i class="glyphicon glyphicon-wrench"></i>硬件设置</a>
                         </li>
                         <li>
-                            <a href="#" id="general"><i class="glyphicon glyphicon-list-alt"></i>General Settings</a>
+                            <a href="#" id="general"><i class="glyphicon glyphicon-list-alt"></i>全局设置</a>
                         </li>
                         <li>
-                            <a href="#" id="mqtt"><i class="glyphicon glyphicon-link"></i>MQTT Settings</a>
+                            <a href="#" id="mqtt"><i class="glyphicon glyphicon-link"></i>MQTT设置</a>
                         </li>
                         <li>
-                            <a href="#" id="ntp"><i class="glyphicon glyphicon-hourglass"></i>NTP (Time) Settings</a>
+                            <a href="#" id="ntp"><i class="glyphicon glyphicon-hourglass"></i>NTP时间设置</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#" id="users"><i  class="glyphicon glyphicon-user"></i>Users</a>
+                    <a href="#" id="users"><i  class="glyphicon glyphicon-user"></i>用户</a>
                 </li>
                 <li>
                     <a href="#logsSubmenu" data-toggle="collapse" aria-expanded="false"><i  class="glyphicon glyphicon-folder-open"></i>Logs</a>
                     <ul class="collapse list-unstyled" id="logsSubmenu">
                         <li>
-                            <a href="#" id="latestlog"><i  class="glyphicon glyphicon-calendar"></i>Access Log</a>
+                            <a href="#" id="latestlog"><i  class="glyphicon glyphicon-calendar"></i>访问日志</a>
                         </li>
                         <li>
-                            <a href="#" id="eventlog"><i  class="glyphicon glyphicon-transfer"></i>Event Log</a>
+                            <a href="#" id="eventlog"><i  class="glyphicon glyphicon-transfer"></i>时间日志</a>
                         </li>
                     </ul>
                 </li>
                 <li>
                     <li>
-                        <a href="#" id="backup"><i class="glyphicon glyphicon-floppy-disk"></i>Backup & Restore</a>
+                        <a href="#" id="backup"><i class="glyphicon glyphicon-floppy-disk"></i>备份/还原</a>
                     </li>
                     <li>
-                        <a href="#" id="reset"><i class="glyphicon glyphicon-repeat"></i>Factory Reset</a>
-                    </li>
-                    <li>
-                        <a data-toggle="modal" href="#update"><i class="glyphicon glyphicon-open"></i>Update</a>
+                        <a href="#" id="reset"><i class="glyphicon glyphicon-repeat"></i>还原出厂设置</a>
                     </li>
             </ul>
             <ul class="list-unstyled CTAs">
+       
                 <li>
-                    <a href="https://github.com/esprfid/esp-rfid" class="download">Project's GitHub Page</a>
-                </li>
-                <li>
-                    <a href="https://salt.bountysource.com/checkout/amount?team=esp-rfid" class="download" aria-hidden="true" data-toggle="popover" data-trigger="hover" data-placement="top" data-content="Nothing says better thank you than a donation."><i class="glyphicon glyphicon-euro"></i>Donate</a>
-                </li>
-                <li>
-                    <a href="#" class="article" onclick="logout();">Logout</a>
+                    <a href="#" class="article" onclick="logout();">退出登录</a>
                 </li>
                 <li>
                     <h6 id="mainver" class="text-center"></h6>
@@ -92,7 +84,7 @@
         <div id="content">
             <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
                 <i class="glyphicon glyphicon-menu-hamburger"></i>
-                <span>Menu</span>
+                <span>菜单</span>
             </button>
             <div id="ajaxcontent">
             </div>
@@ -102,14 +94,14 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Please review changes</h4>
+                            <h4 class="modal-title">请查看修改</h4>
                         </div>
                         <div class="modal-body">
                             <pre id="jsonholder"></pre>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                            <button type="button" onclick="commit();" class="btn btn-success" data-dismiss="modal">Save & Reboot</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="button" onclick="commit();" class="btn btn-success" data-dismiss="modal">保存并重启</button>
                         </div>
                     </div>
                 </div>
@@ -120,10 +112,10 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Are you absolutely sure?</h4>
+                            <h4 class="modal-title">确定修改？</h4>
                         </div>
                         <div class="alert alert-warning">
-                            <h5><strong>Warning!</strong> Unexpected bad things will happen if you don’t read this!</h5>
+                            <h5><strong>警告!</strong>请查看提示内容!</h5>
                         </div>
                         <div class="modal-body">
                             <h5>
@@ -152,7 +144,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Please Sign In</h4>
+                            <h4 class="modal-title">请登录</h4>
                         </div>
                         <div class="row">
                             <br>
@@ -162,9 +154,9 @@
                                         <form role="form" onsubmit="login(); return false">
                                             <fieldset>
                                                 <div class="form-group">
-                                                    <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="" required="" title="Please enter your password">
+                                                    <input id="password" class="form-control" placeholder="密码" name="password" type="password" value="" required="" title="请输入密码">
                                                 </div>
-                                                <button type="submit" class="btn btn-success btn-md pull-right">Login</button>
+                                                <button type="submit" class="btn btn-success btn-md pull-right">登录</button>
                                             </fieldset>
                                         </form>
                                     </div>
@@ -174,61 +166,9 @@
                     </div>
                 </div>
             </div>
-            <div id="update" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <!-- Modal content-->
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Update Firmware</h4>
-                        </div>
-                        <div class="alert alert-warning">
-                            <strong>Warning!</strong> Please make sure you made a backup first
-                        </div>
-                        <div class="modal-body">
-                            <div>
-                                <h4>Latest Version Online</h4>
-                                <div id="onlineupdate">
-                                    <h5 id=releasehead></h5>
-                                    <div style="clear:both;">
-                                        <br>
-                                    </div>
-                                    <pre id="releasebody">Getting update information from GitHub...</pre>
-                                    <div class="pull-right">
-                                        <a class="pull-right" id="downloadupdate">
-                                            <button type="button" class="btn btn-primary">Download</button>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div style="clear:both;">
-                                <br>
-                            </div>
-                            <div>
-                                <h4>Current Version:</h4>
-                                <h5 id="versionhead"></h5>
-                                <div class="form-group">
-                                    <input id="binform" onchange="allowUpload();" type="file" name="update" accept=".bin">
-                                </div>
-                                <div class="pull-right">
-                                    <button onclick="upload();" class="btn btn-primary" id="upbtn" disabled="">Update</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div style="clear:both;">
-                            <br>
-                        </div>
-                        <div class="modal-footer">
-                        </div>
-                    </div>
-                </div>
-            </div>
+        
         </div>
-        <footer class="footer">
-            <div id="commit" class="container">
-                <h6 class="text-muted">esp-rfid - This is a <a href="https://github.com/esprfid/esp-rfid/blob/stable/LICENSE">free</a> software.</h6>
-            </div>
-        </footer>
+
         <div class="overlay"></div>
         <script src="js/required.js"></script>
         <script src="js/esprfid.js"></script>
